--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 </head>
 <body>
 
-  <a href="https://www.amazon.com/">Amazon</a>
-  Absolute Path (external link)
+  <p><a href="https://www.amazon.com/">Amazon</a>
+  Absolute Path (external link)</p>
 
-  <a href="about.html">About</a>
-  Relative Path (internal link)
+  <p><a href="about.html">About</a>
+  Relative Path (internal link)</p>
 
   <!-- Challenge 3: Wrap the img tag below with a link that uses the target attribute -->
-  <a href="https://en.wikipedia.org/wiki/Lion" target="_blank"><img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="a lion"></a>
+  <p><a href="https://en.wikipedia.org/wiki/Lion" target="_blank"><img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="a lion"></a></p>
 
 </body>
 </html>
